samples/_failures_safe/1761561369_5789f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1c35b24.c: In function ‘main’:
./samples/SAFE/__tmp_c1c35b24.c:145:9: error: expected declaration or statement at end of input
  145 |         destroy_matrix(&mat1);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_c1c35b24.c:145:9: error: expected declaration or statement at end of input
